--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -91,7 +91,10 @@ the needed well formatted datasets,
 (iii) the DD chose visualization for each group of data and arrange them
 spatially into a dashboard.
 % Pourquoi ces competences sont souvent des acteurs differents et pas juste des roles?
-Even if those roles collaborates, e.g. the choice of visualization the DD has to make depends on the purpose exposed by the RE, they relates on distinct domains of expertise, each one bringing is own challenges, therefore each role is usually impersonated by a dedicated stakeholder.
+Even if those roles collaborates, e.g. the choice of visualization the DD has
+to make depends on the purpose exposed by the RE, they relates on distinct
+domains of expertise, each one bringing is own challenges, therefore each role
+is usually impersonated by a dedicated stakeholder.
 \mypar{Designing dashboard}
 %\begin{enumerate}
 % Quels sont les outils a dispositions (UML, CTT)
@@ -105,14 +108,19 @@ However, those tools are not designed for the visualization field and reveal a
 lack of expressivity being too generic, as CTT which offers no solution about
 characterization of visualization need.
 % Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
-Moreover, there is a lack of interoperability between those tools due to the distinct field they come from. This results in a difficulty for the stakeholders to dialogue and converge toward a solution when a compromise is needed.
+Moreover, there is a lack of interoperability between those tools due to the
+distinct field they come from. This results in a difficulty for the stakeholders
+to dialogue and converge toward a solution when a compromise is needed.
 %\end{enumerate}
 
 \mypar{Implementing dashboard}
 %\begin{enumerate}
 %\item Quels sont les outils a dispositions (Web, bibliotheques)
-D3.JS, AmChart or an other visualization library to implement the widgets with some HTML5 code to structure the result.
+To implement the dashboard, one can use on-line visualization widget libraries, either professional solution as HighChart and AmChart or community-based example as D3.JS, and add HTML5 code to structure the result.
 %\item Quels sont les problemes quand on les utilise?
+About the last one, due to the huge amount of available widgets (e.g. D3.js
+offers 235 widgets on January 2015), the effort needed to choose a suitable
+visualization is not suitable to a dashboard design process. 
 %\item Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
 %\end{enumerate}
 
