--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -114,15 +114,22 @@ to dialogue and converge toward a solution when a compromise is needed.
 %\end{enumerate}
 
 \mypar{Implementing dashboard}
-%\begin{enumerate}
-%\item Quels sont les outils a dispositions (Web, bibliotheques)
-To implement the dashboard, one can use on-line visualization widget libraries, either professional solution as HighChart and AmChart or community-based example as D3.JS, and add HTML5 code to structure the result.
-%\item Quels sont les problemes quand on les utilise?
-About the last one, due to the huge amount of available widgets (e.g. D3.js
-offers 235 widgets on January 2015), the effort needed to choose a suitable
-visualization is not suitable to a dashboard design process. 
-%\item Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
-%\end{enumerate}
+
+% Quels sont les outils a dispositions (Web, bibliotheques)
+To implement the dashboard, one can use on-line visualization widget libraries,
+either professional solution as HighChart and AmChart or community-based example
+as D3.JS, and add HTML5 code to structure the result.
+% Quels sont les problemes quand on les utilise?
+However, those widgets does not allows integrability with a lot of data format,
+since the development effort is put on the interaction more instead of the interoperability.
+Also, the huge amount of available widgets, e.g. D3.js offers 235 widgets on
+January 2015, increase the difficulty to choose a suitable visualization,
+% Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
+due to the lack of effort in categorization of those new visualization capabilities.
+Those last two points strengthen the difficulty to cooperate with other domains
+because of the gap between the conceptual role of the RE and the implementation
+role of the DD, and because of the incompatible constraints impose by libraries
+on data format which reduce re-usability.
 
 
 \section{Challenges}
