--- a/sigproc.bib
+++ b/sigproc.bib
@@ -5,8 +5,62 @@
   publisher={O'Reilly}
 }
 
+@InProceedings{ecmfa,
+	 title = {{Sensor Data Visualisation: a Composition-based Approach to Support Domain Variability}},
+	 author = {Logre, Ivan and Mosser, S{\'e}bastien and Collet, Philippe and Riveill, Michel},
+	 year = 2014,
+	 booktitle = {European Conference on Modelling Foundations and Applications(ECMFA'14), long paper},
+	 series = {{}},
+	 address = {York, United Kingdom},
+	 month = jul,
+	 days = {23-24 July},
+	 organization = {},
+	 publisher = {Springer LNCS},
+	 pages = {1-16},
+	 lang = {english},
+	 isbn = {},
+	 url = {http://www.i3s.unice.fr/\~{}mosser/\_media/research/ecmfa14.pdf},
+	 sorte = {colin}
+}
 
+@article{ifml,
+	author = {Gustavo Rossi},
+	title = {Web Modeling Languages Strike Back},
+	journal ={IEEE Internet Computing},
+	volume = {17},
+	number = {4},
+	issn = {1089-7801},
+	year = {2013},
+	pages = {4-6},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/MIC.2013.78},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+}
 
+@inproceedings{ctt,
+  author =	 {Fabio Patern{\`o} and Cristiano Mancini and Silvia
+                  Meniconi},
+  title =	 {{ConcurTaskTrees: A Diagrammatic Notation for
+                  Specifying Task Models}},
+  booktitle =	 {INTERACT},
+  year =	 {1997},
+  pages =	 {362-369},
+  crossref =	 {DBLP:conf/interact/1997},
+  bibsource =	 {DBLP, http://dblp.uni-trier.de}
+}
 
+@INPROCEEDINGS{kienzle13,
+TITLE={On the Challenges of Composing Multi-View Models},
+AUTHOR={Schottle, Matthias and Kienzle, Jorg},
+booktitle={Proceedings of the First Workshop On the Globalization of Modeling Languages, GeMOC 2013},
+year = {2013},
+pages = {1-6},
+}
 
-
+@inproceedings{blouin14,
+title = {Extensible Global Model Management with Meta-model Subsets and Model Synchronization},
+author = {Dominique Blouin and Yvan Eustache and Jean-Philippe Diguet},
+pages = {43--52},
+url = {http://ceur-ws.org/Vol-XXX/#paper-07},
+crossref = {GEMOC2014},
+}
