--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -60,7 +60,7 @@ The Internet of Things (IoT) relies on physical objects interconnected
 between each others, creating a mesh of devices producing
 information. In this context, sensors are surrounding our environment
 (\eg cars, buildings, smartphones) and continuously collect data about
-our living environment. To add value to these raw data sets,
+our living environment. In order to add value to these raw data sets,
 visualization dashboards are designed to support end-user decision
 making process. Unfortunately, the tools available to design and
 implement such dashboards are holistic, and does not take into account
@@ -107,7 +107,7 @@ datasets, (iii) the DD chose visualization for each group of data and
 arrange them spatially into a dashboard.
 % Pourquoi ces competences sont souvent des acteurs differents et pas
 % juste des roles?
-Even if those roles collaborates, e.g. the choice of visualization the
+Even if those roles collaborates, \eg the choice of visualization the
 DD has to make depends on the purpose exposed by the RE, they relates
 on distinct domains of expertise and formation, each one bringing is
 own challenges, therefore each role is usually impersonated by a
@@ -141,7 +141,7 @@ result.
 % Quels sont les problemes quand on les utilise?
 However, those widgets does not allows integrability with a lot of data format,
 since the development effort is put on the interaction more instead of the interoperability.
-Also, the huge amount of available widgets, e.g. D3.js offers 235 widgets on
+Also, the huge amount of available widgets, \eg D3.js offers 235 widgets on
 January 2015, increase the difficulty to choose a suitable visualization,
 % Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
 due to the lack of effort in categorization of those new visualization
@@ -231,15 +231,15 @@ while insuring the same properties as service-oriented architecture
 field.
 
 \section{Conclusions \& Perspectives}
-In this paper, we described the domain of vizualization dashboard
-design. This domain crosscut several research fields, from
+In this paper, we described the domain of visualization dashboard
+design. This domain crosscuts several research fields, from
 human-computer interactions to big data. We highlighted four
 challenges in this domain where a software engineering approach based
 on modularity concepts could support it. However, all the challenges
 triggered by this domain are not yet solved from a separation of
-concerns point of view.  In our upcoming works, we plan to focus on
+concerns point of view. In our upcoming works, we plan to focus on
 defining a formal way to support exchanges between the different roles
-invilved in the domain, emphasizing integrity and isolation
+involved in the domain, emphasizing integrity and isolation
 properties.
 %% Un petit paragraphe de conclusions/
 
