Check numbers and clarify on 3.2 .

--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -181,11 +181,12 @@ would need to reference a specific dataset.
 
 \mypar{Evolution capabilities}
 Data visualization is a growing, fast evolving field
-(3 320 000 Google results in 01/15,
+(6 440 000 Google results for \emph{"data visualization"} in 01/15,
 D3.js offered 133 widgets in 04/14 and 235 in 01/15),
 as well as requirement engineering (RE) is an active research field
 offering new way to capture needs (more than 730 papers published
-last year talked about RE, and 640 about goal models)
+since 2014 and referenced by Google Scholar contains
+\emph{"requirement engineering"}, and 640 \emph{"goal model"})
 and data scalability is still an opened scientific lock.
 For those reasons, their respective tool or domain
 specific languages (DSL) used will have to evolve in time, the composition
