--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -141,7 +141,8 @@ community-based example as D3.JS, and add HTML5 code to structure the
 result.
 % Quels sont les problemes quand on les utilise?
 However, those widgets does not allows integrability with a lot of data format,
-since the development effort is put on the interaction more instead of the interoperability.
+since the development effort is put on the interaction aspect
+instead of the interoperability.
 Also, the huge amount of available widgets, \eg D3.js offers 235 widgets on
 January 2015, increase the difficulty to choose a suitable visualization,
 % Est-ce qu'on sort certains experts de leur domaine de competences avec ces outils?
@@ -228,8 +229,12 @@ The state of the art reveals two main ways to manage this composition :\\
 \iitem{i} Fusion/Merge, i.e. the operation to produce one bigger meta
 model from several meta models by identification of a pivot and
 merging from it, and
-then refine the associated concrete syntaxes to produce a global one. \cite{kienzle13}\\
-\iitem{ii} Aggregation, i.e. make enough assumptions about the meta models to be able to link them through the transformation of several meta models by adding, deleting or editing specific model elements, essentially to align two concepts from different domains or to reference an external concept in order to delegate part of the responsibilities. \cite{blouin14}\\
+then refine the associated concrete syntaxes to produce a global one.\cite{kienzle13}\\
+\iitem{ii} Aggregation, i.e. make enough assumptions about the meta models
+to be able to link them through the transformation of several meta models
+by adding, deleting or editing specific model elements, essentially to align
+two concepts from different domains or to reference an external concept
+in order to delegate part of the responsibilities. \cite{blouin14}\\
 The authors short-term perspective is to work on the integration of
 the DSLs as software services in order to be able to compose languages
 while insuring the same properties as service-oriented architecture
