--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,26 +1,30 @@
 @BOOK{few:dashboard,
-  title={{Information Dashboard Design}},
-  author={Few, Stephen},
-  year={2006},
-  publisher={O'Reilly}
+  title =	 {{Information Dashboard Design}},
+  author =	 {Few, Stephen},
+  year =	 {2006},
+  publisher =	 {O'Reilly}
 }
 
 @InProceedings{ecmfa,
-	 title = {{Sensor Data Visualisation: a Composition-based Approach to Support Domain Variability}},
-	 author = {Logre, Ivan and Mosser, S{\'e}bastien and Collet, Philippe and Riveill, Michel},
-	 year = 2014,
-	 booktitle = {European Conference on Modelling Foundations and Applications(ECMFA'14), long paper},
-	 series = {{}},
-	 address = {York, United Kingdom},
-	 month = jul,
-	 days = {23-24 July},
-	 organization = {},
-	 publisher = {Springer LNCS},
-	 pages = {1-16},
-	 lang = {english},
-	 isbn = {},
-	 url = {http://www.i3s.unice.fr/\~{}mosser/\_media/research/ecmfa14.pdf},
-	 sorte = {colin}
+  title =	 {{Sensor Data Visualisation: a Composition-based
+                  Approach to Support Domain Variability}},
+  author =	 {Logre, Ivan and Mosser, S{\'e}bastien and Collet,
+                  Philippe and Riveill, Michel},
+  year =	 2014,
+  booktitle =	 {European Conference on Modelling Foundations and
+                  Applications (ECMFA'14)},
+  series =	 {},
+  address =	 {York, United Kingdom},
+  month =	 jul,
+  days =	 {23-24 July},
+  organization = {},
+  publisher =	 {Springer LNCS},
+  pages =	 {1-16},
+  lang =	 {english},
+  isbn =	 {},
+  url =
+                  {http://www.i3s.unice.fr/\~{}mosser/\_media/research/ecmfa14.pdf},
+  sorte =	 {colin}
 }
 
 @article{ifml,
